[package]
name = "sha3-256"
version = "0.1.0"
authors = ["Rafael Escrich <rafaelescrich@gmail.com>"]
description = "Sha3-256 for bitcoin-ts"
license = "MIT"
repository = "https://github.com/bitjson/bitcoin-ts/"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayref = '0.3.4'
sha3 = '0.7.3'
wasm-bindgen = '0.2.15'

[profile.release]
panic = 'abort'
debug = false
lto = true
opt-level = 'z'
